@@ -1,0 +1,3 @@
+Box should start moving left after left style is reset after 500ms
+
+PASS
