@@ -1,3 +1,15 @@
+2008-08-21  Chris Marrin  <cmarrin@apple.com>
+
+        Allow 0 (without units) for Time eg. duration
+        Fix for https://bugs.webkit.org/show_bug.cgi?id=20467
+
+        Reviewed by Dave Hyatt.
+
+        Test: css1/units/zero-duration-without-units.html
+
+        * css/CSSParser.cpp:
+        (WebCore::CSSParser::validUnit):
+
 2008-08-21  Timothy Hatcher  <timothy@apple.com>
 
         Make deleting all text while editing a DOM attribute in
