@@ -1,3 +1,13 @@
+2008-08-21  Chris Marrin  <cmarrin@apple.com>
+
+        Allow 0 (without units) for Time eg. duration
+        Fix for https://bugs.webkit.org/show_bug.cgi?id=20467
+
+        Reviewed by Dave Hyatt.
+
+        * css1/units/zero-duration-without-units-expected.txt: Added.
+        * css1/units/zero-duration-without-units.html: Added.
+
 2008-08-20  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Dave Hyatt
